feat: 已安装容器管理
